# aws-glue-spark-connect

./: README.md  REQUIRED_IAM_POLICY.json  glue-spark-cli.py  glue_spark_cli.py  pyproject.toml
tests/: test_glue_spark_cli.py
